force-app/main/default/objects/nFORCE__Business_Activity_Conditional__c/fields/nFORCE__Conditional_From__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Conditional_From__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The user populates this required lookup field with the business activity parent record that this business activity is associated with.</description>
    <inlineHelpText>This lookup field indicates the parent business activity associated with the business activity.</inlineHelpText>
    <label>Conditional From</label>
    <referenceTo>nFORCE__Business_Activity__c</referenceTo>
    <relationshipLabel>Conditional To</relationshipLabel>
    <relationshipName>Conditional_From</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>