force-app/main/default/objects/nFORCE__Business_Activity_Conditional__c/fields/nFORCE__Conditional_To__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Conditional_To__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The user populates this required lookup field with the child business activity record that the business activity is associated with.</description>
    <inlineHelpText>This lookup field indicates the child business activity associated with the business activity.</inlineHelpText>
    <label>Conditional To</label>
    <referenceTo>nFORCE__Business_Activity__c</referenceTo>
    <relationshipLabel>Conditional From</relationshipLabel>
    <relationshipName>Conditional_To</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>