force-app/main/default/objects/nFORCE__Business_Activity_Conditional__c/fields/nFORCE__Conditional_Type__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Conditional_Type__c</fullName>
    <description>The user populates this required picklist field with the conditional type that indicates the circumstances under which the business activity is called.  By default, this value is set to Success Conditional.</description>
    <inlineHelpText>This system-populated field indicates the conditional type of the business activity.</inlineHelpText>
    <label>Conditional Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Success Conditional</fullName>
                <default>true</default>
                <label>Success Conditional</label>
            </value>
            <value>
                <fullName>Error Conditional</fullName>
            </value>
            <value>
                <fullName>Finalizer Success Conditional</fullName>
            </value>
            <value>
                <fullName>Finalizer Error Conditional</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>